add: 1、添加了资源文件，测试资源文件是否会被发布。利用 aab 的形式。

--- a/hellolib/build.gradle
+++ b/hellolib/build.gradle
@@ -46,7 +46,7 @@ android {
                 // Creates a Maven publication called "release".
                 release(MavenPublication) {
                     // Applies the component for the release build variant.
-                    from components.release
+                    from components.release_aab
 
                     // You can then customize attributes of the publication as shown below.
                     groupId = 'com.young.hellolib'
