add: 1、添加了资源文件，测试资源文件是否会被发布。利用 aab 的形式。

--- a/hellolib/build.gradle
+++ b/hellolib/build.gradle
@@ -44,13 +44,13 @@ android {
             def versionName = "1.0.0"
             publications {
                 // Creates a Maven publication called "release".
-                release(MavenPublication) {
+                paidRelease(MavenPublication) {
                     // Applies the component for the release build variant.
-                    from components.release_aab
+                    from components.paidRelease_aab
 
                     // You can then customize attributes of the publication as shown below.
                     groupId = 'com.young.hellolib'
-                    artifactId = 'hellolib'
+                    artifactId = 'hellolib-aab'
                     version = versionName
                 }
             }
