--- a/hellolib/build.gradle
+++ b/hellolib/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-//    id 'com.android.library'
     id 'com.android.application'
     id 'kotlin-android'
     id 'maven-publish'
@@ -31,26 +30,39 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         useIR = true
-        jvmTarget = '11'
+        jvmTarget = '1.8'
         freeCompilerArgs += ["-Xskip-prerelease-check"]
     }
 
     afterEvaluate {
         publishing {
+            def versionName = "1.0.0"
+//            publications {
+//                // Creates a Maven publication called "release".
+//                release(MavenPublication) {
+//                    // Applies the component for the release build variant.
+//                    from components.release
+//
+//                    // You can then customize attributes of the publication as shown below.
+//                    groupId = 'com.young.hellolib'
+//                    artifactId = 'hellolib'
+//                    version = versionName
+//                }
+//            }
             publications {
                 paidRelease(MavenPublication) {
                     // The following applies a component to this publication
                     // which results in publishing an app bundle.
-                    from components.paidRelease_aab
+                    from components.release_aab
 
                     groupId = 'com.young.hellolib'
-                    artifactId = 'paid-release-aab'
-                    version = '1.0'
+                    artifactId = 'hellolib-aab'
+                    version = versionName
                 }
             }
             repositories {
@@ -63,31 +75,6 @@ android {
                 }
             }
         }
-//    afterEvaluate {
-//        publishing {
-//            def versionName = "1.0.0"
-//            publications {
-//                // Creates a Maven publication called "release".
-//                release(MavenPublication) {
-//                    // Applies the component for the release build variant.
-//                    from components.release
-//
-//                    // You can then customize attributes of the publication as shown below.
-//                    groupId = 'com.young.hellolib'
-//                    artifactId = 'hellolib-aab'
-//                    version = versionName
-//                }
-//            }
-//            repositories {
-//                maven {
-//                    // change URLs to point to your repos, e.g. http://my.org/repo
-//                    def baseUrl = buildDir.getParent()
-//                    def releasesRepoUrl = "$baseUrl/repos/releases"
-//                    def snapshotsRepoUrl = "$baseUrl/repos/snapshots"
-//                    url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-//                }
-//            }
-//        }
     }
 }
 
