--- a/hellolib/build.gradle
+++ b/hellolib/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'maven-publish'
 }
@@ -41,27 +41,16 @@ android {
 
     afterEvaluate {
         publishing {
-            def versionName = "1.0.0"
-//            publications {
-//                // Creates a Maven publication called "release".
-//                release(MavenPublication) {
-//                    // Applies the component for the release build variant.
-//                    from components.release
-//
-//                    // You can then customize attributes of the publication as shown below.
-//                    groupId = 'com.young.hellolib'
-//                    artifactId = 'hellolib'
-//                    version = versionName
-//                }
-//            }
+            def versionName = "1.0.2"
             publications {
-                paidRelease(MavenPublication) {
-                    // The following applies a component to this publication
-                    // which results in publishing an app bundle.
-                    from components.release_aab
+                // Creates a Maven publication called "release".
+                release(MavenPublication) {
+                    // Applies the component for the release build variant.
+                    from components.release
 
+                    // You can then customize attributes of the publication as shown below.
                     groupId = 'com.young.hellolib'
-                    artifactId = 'hellolib-aab'
+                    artifactId = 'hellolib'
                     version = versionName
                 }
             }
