--- a/hellolib/build.gradle
+++ b/hellolib/build.gradle
@@ -41,20 +41,21 @@ android {
 
     afterEvaluate {
         publishing {
-            def versionName = "1.0.2"
+            def versionName = "1.0.2" // 当前版本依赖库版本号，这个jitpack不会使用到，只是我们开发者自己查看
             publications {
                 // Creates a Maven publication called "release".
                 release(MavenPublication) {
                     // Applies the component for the release build variant.
-                    from components.release
+                    from components.release // 表示发布 release（jitpack 都不会使用到）
 
                     // You can then customize attributes of the publication as shown below.
-                    groupId = 'com.young.hellolib'
-                    artifactId = 'hellolib'
+                    groupId = 'com.young.hellolib' // 这个是依赖库的组 id
+                    artifactId = 'hellolib' // 依赖库的名称（jitpack 都不会使用到）
                     version = versionName
                 }
             }
             repositories {
+                // 下面这部分，不是很清楚加不加，但是最后加上
                 maven {
                     // change URLs to point to your repos, e.g. http://my.org/repo
                     def baseUrl = buildDir.getParent()
